<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/server"/>
<EditText android:layout_height="wrap_content" android:id="@+id/server" android:layout_width="fill_parent" android:inputType="textNoSuggestions"></EditText>
<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/port"/>
<EditText android:layout_height="wrap_content" android:id="@+id/port" android:layout_width="fill_parent" android:inputType="number" android:lines="1" android:text="@string/defaultPort"></EditText>
<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/username"/>
<EditText android:layout_height="wrap_content" android:id="@+id/username" android:layout_width="fill_parent" android:inputType="textNoSuggestions"></EditText>
<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/password"/>
<EditText android:layout_height="wrap_content" android:id="@+id/password" android:layout_width="fill_parent" android:inputType="textPassword"></EditText>
<CheckBox android:text="Use SSL (https)"  android:layout_height="wrap_content" android:layout_width="fill_parent" android:checked="true" android:id="@+id/use_ssl"></CheckBox>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/login" android:text="@string/login" android:layout_gravity="center"></Button>
</LinearLayout>
